--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,31 @@
-# Docker
-# Build a Docker image 
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
-
-trigger:
-- master
-
-resources:
-- repo: self
-
-variables:
-  tag: '$(Build.BuildId)'
-
 stages:
 - stage: Build
-  displayName: Build image
-  jobs:  
+  jobs:
   - job: Build
-    displayName: Build
     pool:
-      vmImage: 'ubuntu-latest'
+      vmImage: 'Ubuntu-16.04'
+    continueOnError: true
     steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Source/SmartHotel360.Website/Dockerfile'
-        tags: |
-          $(tag)
+    - script: echo "hello to my first Build"
+- stage: dev_deploy
+  jobs:
+  - deployment: dev_deploy
+    pool:
+      vmImage: 'Ubuntu-16.04'
+    environment: 'dev-hello'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo "hello, dev world !!!"
+- stage: qa_deploy
+  jobs:
+  - deployment: qa_deploy
+    pool:
+      vmImage: 'Ubuntu-16.04'
+    environment: 'qa-hello'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - script: echo "hello, qa world !!!"
